exercises/exercise1
2.0.0 (main):0 > b = Brewery.create name: "BrewDog", year:2007
   (0.1ms)  begin transaction
  SQL (0.5ms)  INSERT INTO "breweries" ("created_at", "name", "updated_at", "year") VALUES (?, ?, ?, ?)  [["created_at", Mon, 20 Jan 2014 18:06:35 UTC +00:00], ["name", "BrewDog"], ["updated_at", Mon, 20 Jan 2014 18:06:35 UTC +00:00], ["year", 2007]]
   (2.7ms)  commit transaction
=> #<Brewery id: 8, name: "BrewDog", year: 2007, created_at: "2014-01-20 18:06:35", updated_at: "2014-01-20 18:06:35">
2.0.0 (main):0 > b.beers << Beer.create name:"Punk IPA" style:"IPA"
SyntaxError: unexpected tLABEL, expecting end-of-input
b.beers << Beer.create name:"Punk IPA" style:"IPA"
                            ^
2.0.0 (main):0 > b.beers << Beer.create (name:"Punk IPA" style:"IPA")
SyntaxError: unexpected ( arg, expecting end-of-input
b.beers << Beer.create (name:"Punk IPA" style:"IPA")
                        ^
2.0.0 (main):0 > b.beers << Beer.create(name:"Punk IPA" style:"IPA")
SyntaxError: unexpected tIDENTIFIER, expecting ')'
b.beers << Beer.create(name:"Punk IPA" style:"IPA")
                                            ^
2.0.0 (main):0 > b.beers << Beer.create(name:"Punk IPA", style:"IPA")
   (0.1ms)  begin transaction
  SQL (0.4ms)  INSERT INTO "beers" ("created_at", "name", "style", "updated_at") VALUES (?, ?, ?, ?)  [["created_at", Mon, 20 Jan 2014 18:07:21 UTC +00:00], ["name", "Punk IPA"], ["style", "IPA"], ["updated_at", Mon, 20 Jan 2014 18:07:21 UTC +00:00]]
   (2.0ms)  commit transaction
   (0.1ms)  begin transaction
  SQL (0.3ms)  UPDATE "beers" SET "brewery_id" = ?, "updated_at" = ? WHERE "beers"."id" = 19  [["brewery_id", 8], ["updated_at", Mon, 20 Jan 2014 18:07:21 UTC +00:00]]
   (0.8ms)  commit transaction
  Beer Load (0.1ms)  SELECT "beers".* FROM "beers" WHERE "beers"."brewery_id" = ?  [["brewery_id", 8]]
=> [#<Beer id: 19, name: "Punk IPA", style: "IPA", brewery_id: 8, created_at: "2014-01-20 18:07:21", updated_at: "2014-01-20 18:07:21">]
2.0.0 (main):0 > b.beers << Beer.create(name:"Nanny State", style:"lowalcohol")
   (0.1ms)  begin transaction
  SQL (0.8ms)  INSERT INTO "beers" ("created_at", "name", "style", "updated_at") VALUES (?, ?, ?, ?)  [["created_at", Mon, 20 Jan 2014 18:07:38 UTC +00:00], ["name", "Nanny State"], ["style", "lowalcohol"], ["updated_at", Mon, 20 Jan 2014 18:07:38 UTC +00:00]]
   (0.8ms)  commit transaction
   (0.1ms)  begin transaction
  SQL (0.3ms)  UPDATE "beers" SET "brewery_id" = ?, "updated_at" = ? WHERE "beers"."id" = 20  [["brewery_id", 8], ["updated_at", Mon, 20 Jan 2014 18:07:38 UTC +00:00]]
   (0.7ms)  commit transaction
=> [#<Beer id: 19, name: "Punk IPA", style: "IPA", brewery_id: 8, created_at: "2014-01-20 18:07:21", updated_at: "2014-01-20 18:07:21">,
 #<Beer id: 20, name: "Nanny State", style: "lowalcohol", brewery_id: 8, created_at: "2014-01-20 18:07:38", updated_at: "2014-01-20 18:07:38">]
2.0.0 (main):0 > b.beers.each do |beer|
2.0.0 (main):0 *   1.u
1.unloadable  1.untaint     1.until       1.untrust     1.untrusted?  1.upto
2.0.0 (main):0 *   1.upto(5) do |i|
2.0.0 (main):0 *     beer.ratings.create score:(i*Random.rand(1.0)*14.5)
2.0.0 (main):0 *   end
2.0.0 (main):0 * end
   (0.1ms)  begin transaction
  SQL (0.5ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 19], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 8], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (3.0ms)  commit transaction
   (0.1ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 19], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 21], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.7ms)  commit transaction
   (0.0ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 19], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 9], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.7ms)  commit transaction
   (0.0ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 19], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 8], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.8ms)  commit transaction
   (0.1ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 19], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 9], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.7ms)  commit transaction
   (0.0ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 20], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 3], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.7ms)  commit transaction
   (0.0ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 20], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 27], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.9ms)  commit transaction
   (0.1ms)  begin transaction
  SQL (0.4ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 20], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 31], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.9ms)  commit transaction
   (0.1ms)  begin transaction
  SQL (0.4ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 20], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 22], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.7ms)  commit transaction
   (0.1ms)  begin transaction
  SQL (0.4ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 20], ["created_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00], ["score", 32], ["updated_at", Mon, 20 Jan 2014 18:11:38 UTC +00:00]]
   (0.7ms)  commit transaction
=> [#<Beer id: 19, name: "Punk IPA", style: "IPA", brewery_id: 8, created_at: "2014-01-20 18:07:21", updated_at: "2014-01-20 18:07:21">,
 #<Beer id: 20, name: "Nanny State", style: "lowalcohol", brewery_id: 8, created_at: "2014-01-20 18:07:38", updated_at: "2014-01-20 18:07:38">]

